# cmake-subfolder-example

./: CMakeLists.txt  README.md  main.cpp
